--- a/MeowCAD/MeowCAD.vcxproj
+++ b/MeowCAD/MeowCAD.vcxproj
@@ -144,7 +144,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Command.cpp" />
     <ClCompile Include="Cube.cpp" />
+    <ClCompile Include="Engine.cpp" />
     <ClCompile Include="ETime.cpp" />
     <ClCompile Include="FileUtils.cpp" />
     <ClCompile Include="Initializers.cpp" />
@@ -173,7 +175,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Command.h" />
     <ClInclude Include="Cube.h" />
+    <ClInclude Include="Engine.h" />
     <ClInclude Include="ETime.h" />
     <ClInclude Include="FileUtils.h" />
     <ClInclude Include="Initializers.h" />
