- All things moved from main.cpp to Engine.h - Engine and LogUtils classes implement Singleton pattern - Log window was added. So we can see logs inside app window (not terminal)

--- a/MeowCAD/imgui.ini
+++ b/MeowCAD/imgui.ini
@@ -11,7 +11,7 @@ Pos=994,411
 Size=505,493
 
 [Window][Text Editor Demo]
-Pos=840,153
+Pos=100,146
 Size=543,754
 
 [Window][demo]
@@ -37,6 +37,10 @@ Size=125,216
 [Window][Dear ImGui Metrics/Debugger/undopoints_C2226547]
 IsChild=1
 Size=704,180
+
+[Window][My First Tool]
+Pos=1278,174
+Size=438,521
 
 [Table][0xF653A44F,4]
 RefScale=18
