- AppIcon was added - Credits was added

--- a/MeowCAD/imgui.ini
+++ b/MeowCAD/imgui.ini
@@ -39,8 +39,16 @@ IsChild=1
 Size=704,180
 
 [Window][My First Tool]
-Pos=1278,174
-Size=438,521
+Pos=507,112
+Size=409,358
+
+[Window][LOG]
+Pos=60,60
+Size=342,367
+
+[Window][Credits]
+Pos=533,72
+Size=203,83
 
 [Table][0xF653A44F,4]
 RefScale=18
