Outliner was added. Now we can display name of meshes.

--- a/MeowCAD/imgui.ini
+++ b/MeowCAD/imgui.ini
@@ -19,7 +19,7 @@ Pos=109,399
 Size=274,325
 
 [Window][Dear ImGui Demo]
-Pos=1101,140
+Pos=408,121
 Size=550,680
 
 [Window][Dear ImGui Metrics/Debugger]
@@ -43,12 +43,16 @@ Pos=507,112
 Size=409,358
 
 [Window][LOG]
-Pos=60,60
+Pos=224,57
 Size=342,367
 
 [Window][Credits]
 Pos=533,72
 Size=203,83
+
+[Window][Outliner]
+Pos=1291,164
+Size=366,420
 
 [Table][0xF653A44F,4]
 RefScale=18
