properties window added. Now we can change the transform of selected mesh.

--- a/MeowCAD/imgui.ini
+++ b/MeowCAD/imgui.ini
@@ -11,7 +11,7 @@ Pos=994,411
 Size=505,493
 
 [Window][Text Editor Demo]
-Pos=100,146
+Pos=993,82
 Size=543,754
 
 [Window][demo]
@@ -43,16 +43,20 @@ Pos=507,112
 Size=409,358
 
 [Window][LOG]
-Pos=224,57
+Pos=110,60
 Size=342,367
 
 [Window][Credits]
 Pos=533,72
-Size=203,83
+Size=220,124
 
 [Window][Outliner]
-Pos=1291,164
-Size=366,420
+Pos=131,367
+Size=290,420
+
+[Window][Properties]
+Pos=557,220
+Size=366,386
 
 [Table][0xF653A44F,4]
 RefScale=18
