--- a/MeowCAD/imgui.ini
+++ b/MeowCAD/imgui.ini
@@ -51,12 +51,16 @@ Pos=533,72
 Size=220,124
 
 [Window][Outliner]
-Pos=131,367
+Pos=59,466
 Size=290,420
 
 [Window][Properties]
-Pos=503,68
+Pos=66,6
 Size=366,386
+
+[Window][Viewport]
+Pos=518,45
+Size=1179,828
 
 [Table][0xF653A44F,4]
 RefScale=18
