- glfwSwapInterval(1); // Enable vsync - docking windows

--- a/MeowCAD/imgui.ini
+++ b/MeowCAD/imgui.ini
@@ -1,38 +1,48 @@
 [Window][Debug##Default]
-Pos=168,22
-Size=400,400
+Pos=47,99
+Size=1800,768
+Collapsed=1
 
 [Window][test]
 Pos=623,106
 Size=172,159
+Collapsed=0
 
 [Window][TEXT]
 Pos=994,411
 Size=505,493
+Collapsed=0
 
 [Window][Text Editor Demo]
-Pos=993,82
-Size=543,754
+Pos=1474,24
+Size=446,242
+Collapsed=0
+DockId=0x00000003,0
 
 [Window][demo]
 Pos=109,399
 Size=274,325
+Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=408,121
-Size=550,680
+Pos=1236,479
+Size=340,318
+Collapsed=0
 
 [Window][Dear ImGui Metrics/Debugger]
 Pos=160,112
 Size=755,787
+Collapsed=0
 
 [Window][Dear ImGui ID Stack Tool]
 Pos=60,60
 Size=326,144
+Collapsed=0
 
 [Window][Dear ImGui Debug Log]
 Pos=60,60
 Size=125,216
+Collapsed=0
 
 [Window][Dear ImGui Metrics/Debugger/undopoints_C2226547]
 IsChild=1
@@ -41,26 +51,41 @@ Size=704,180
 [Window][My First Tool]
 Pos=507,112
 Size=409,358
+Collapsed=0
 
 [Window][LOG]
-Pos=599,230
-Size=384,356
+Pos=1623,555
+Size=299,515
+Collapsed=0
+DockId=0xF852211D,0
 
 [Window][Credits]
-Pos=533,72
-Size=220,124
+Pos=1125,487
+Size=1226,728
+Collapsed=0
 
 [Window][Outliner]
-Pos=184,318
-Size=290,420
+Pos=1474,24
+Size=446,394
+Collapsed=0
+DockId=0x00000005,0
 
 [Window][Properties]
-Pos=122,102
-Size=366,386
+Pos=1474,24
+Size=446,1033
+Collapsed=0
+DockId=0x00000006,0
 
 [Window][Viewport]
-Pos=686,110
-Size=799,733
+Pos=0,24
+Size=1472,1033
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][WindowOverViewport_11111111]
+Pos=0,24
+Size=1920,1033
+Collapsed=0
 
 [Table][0xF653A44F,4]
 RefScale=18
@@ -68,4 +93,14 @@ Column 0  Width=65
 Column 1  Width=116
 Column 2  Width=96
 Column 3  Width=216
+
+[Docking][Data]
+DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=0,24 Size=1920,1033 Split=X Selected=0x1D2F55EC
+  DockNode      ID=0x00000001 Parent=0x7C6B3D9B SizeRef=1472,1033 CentralNode=1 Selected=0x13926F0B
+  DockNode      ID=0x00000002 Parent=0x7C6B3D9B SizeRef=446,1033 Split=Y Selected=0x1D2F55EC
+    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=446,242 Selected=0x1D2F55EC
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=446,789 Split=Y Selected=0x94263E27
+      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=446,394 Selected=0x94263E27
+      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=446,637 Selected=0x199AB496
+DockSpace       ID=0xF852211D Pos=55,131 Size=1784,728 CentralNode=1 Selected=0x13926F0B
 
