- PBR implemented partially - We need a Material Editor and also a Texture Editor

--- a/MeowCAD/MeowCAD.vcxproj.filters
+++ b/MeowCAD/MeowCAD.vcxproj.filters
@@ -199,5 +199,11 @@
     <None Include="shaders\skybox.vs">
       <Filter>Resource Files\Shaders</Filter>
     </None>
+    <None Include="shaders\pbr.fs">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="shaders\pbr.vs">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
