--- a/MeowCAD/MeowCAD.vcxproj
+++ b/MeowCAD/MeowCAD.vcxproj
@@ -202,6 +202,8 @@
     <None Include="shaders\base.vert" />
     <None Include="shaders\material.frag" />
     <None Include="shaders\material.vert" />
+    <None Include="shaders\pbr.fs" />
+    <None Include="shaders\pbr.vs" />
     <None Include="shaders\skybox.fs" />
     <None Include="shaders\skybox.vs" />
   </ItemGroup>
