--- a/MeowCAD/imgui.ini
+++ b/MeowCAD/imgui.ini
@@ -17,7 +17,7 @@ Collapsed=0
 Pos=1474,24
 Size=446,242
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000002,0
 
 [Window][demo]
 Pos=109,399
@@ -66,13 +66,13 @@ Collapsed=0
 
 [Window][Outliner]
 Pos=1474,24
-Size=446,394
+Size=446,393
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties]
-Pos=1474,420
-Size=446,637
+Pos=1474,419
+Size=446,638
 Collapsed=0
 DockId=0x00000006,0
 
@@ -95,12 +95,12 @@ Column 2  Width=96
 Column 3  Width=216
 
 [Docking][Data]
-DockSpace       ID=0x7C6B3D9B Window=0xA87D555D Pos=0,24 Size=1920,1033 Split=X Selected=0x1D2F55EC
-  DockNode      ID=0x00000001 Parent=0x7C6B3D9B SizeRef=1472,1033 CentralNode=1 Selected=0x13926F0B
-  DockNode      ID=0x00000002 Parent=0x7C6B3D9B SizeRef=446,1033 Split=Y Selected=0x1D2F55EC
-    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=446,242 Selected=0x1D2F55EC
-    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=446,789 Split=Y Selected=0x94263E27
-      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=446,394 Selected=0x94263E27
-      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=446,637 Selected=0x199AB496
-DockSpace       ID=0xF852211D Pos=55,131 Size=1784,728 CentralNode=1 Selected=0x13926F0B
+DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,24 Size=1920,1033 Split=X Selected=0x1D2F55EC
+  DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=1472,1033 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1472,1033 CentralNode=1 Selected=0x13926F0B
+    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=446,1033 Selected=0x1D2F55EC
+  DockNode    ID=0x00000004 Parent=0x7C6B3D9B SizeRef=446,1033 Split=Y Selected=0x199AB496
+    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=446,393 Selected=0x94263E27
+    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=446,638 Selected=0x199AB496
+DockSpace     ID=0xF852211D Pos=55,131 Size=1784,728 CentralNode=1 Selected=0x13926F0B
 
