--- a/MeowCAD/imgui.ini
+++ b/MeowCAD/imgui.ini
@@ -54,10 +54,10 @@ Size=409,358
 Collapsed=0
 
 [Window][LOG]
-Pos=1623,555
-Size=299,515
+Pos=1499,374
+Size=421,683
 Collapsed=0
-DockId=0xF852211D,0
+DockId=0x00000006,1
 
 [Window][Credits]
 Pos=1125,487
@@ -66,13 +66,13 @@ Collapsed=0
 
 [Window][Outliner]
 Pos=1499,24
-Size=421,311
+Size=421,348
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties]
-Pos=1499,337
-Size=421,720
+Pos=1499,374
+Size=421,683
 Collapsed=0
 DockId=0x00000006,0
 
@@ -100,7 +100,6 @@ DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,24 Size=1920,1033 Split=X Se
     DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1472,1033 CentralNode=1 Selected=0x13926F0B
     DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=446,1033 Selected=0x1D2F55EC
   DockNode    ID=0x00000004 Parent=0x7C6B3D9B SizeRef=421,1033 Split=Y Selected=0x199AB496
-    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=446,311 Selected=0x94263E27
-    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=446,720 Selected=0x199AB496
-DockSpace     ID=0xF852211D Pos=55,131 Size=1784,728 CentralNode=1 Selected=0x13926F0B
+    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=446,348 Selected=0x94263E27
+    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=446,683 Selected=0x199AB496
 
