--- a/MeowCAD/imgui.ini
+++ b/MeowCAD/imgui.ini
@@ -54,8 +54,8 @@ Size=409,358
 Collapsed=0
 
 [Window][LOG]
-Pos=1499,374
-Size=421,683
+Pos=779,321
+Size=421,579
 Collapsed=0
 DockId=0x00000006,1
 
@@ -65,26 +65,26 @@ Size=1226,728
 Collapsed=0
 
 [Window][Outliner]
-Pos=1499,24
-Size=421,348
+Pos=779,24
+Size=421,295
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties]
-Pos=1499,374
-Size=421,683
+Pos=779,321
+Size=421,579
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Viewport]
 Pos=0,24
-Size=1497,1033
+Size=777,876
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,24
-Size=1920,1033
+Size=1200,876
 Collapsed=0
 
 [Table][0xF653A44F,4]
@@ -95,11 +95,11 @@ Column 2  Width=96
 Column 3  Width=216
 
 [Docking][Data]
-DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,24 Size=1920,1033 Split=X Selected=0x1D2F55EC
+DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,24 Size=1200,876 Split=X Selected=0x1D2F55EC
   DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=883,1033 Split=X
     DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1472,1033 CentralNode=1 Selected=0x13926F0B
     DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=446,1033 Selected=0x1D2F55EC
   DockNode    ID=0x00000004 Parent=0x7C6B3D9B SizeRef=421,1033 Split=Y Selected=0x199AB496
     DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=446,348 Selected=0x94263E27
-    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=446,683 Selected=0x199AB496
+    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=446,683 Selected=0xA29824D7
 
