--- a/MeowCAD/imgui.ini
+++ b/MeowCAD/imgui.ini
@@ -14,10 +14,9 @@ Size=505,493
 Collapsed=0
 
 [Window][Text Editor Demo]
-Pos=1474,24
-Size=446,242
+Pos=826,97
+Size=446,929
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][demo]
 Pos=109,399
@@ -54,8 +53,8 @@ Size=409,358
 Collapsed=0
 
 [Window][LOG]
-Pos=779,321
-Size=421,579
+Pos=1499,374
+Size=421,683
 Collapsed=0
 DockId=0x00000006,1
 
@@ -65,26 +64,26 @@ Size=1226,728
 Collapsed=0
 
 [Window][Outliner]
-Pos=779,24
-Size=421,295
+Pos=1499,24
+Size=421,348
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties]
-Pos=779,321
-Size=421,579
+Pos=1499,374
+Size=421,683
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Viewport]
 Pos=0,24
-Size=777,876
+Size=1497,1033
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000003,0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,24
-Size=1200,876
+Size=1920,1033
 Collapsed=0
 
 [Table][0xF653A44F,4]
@@ -95,11 +94,9 @@ Column 2  Width=96
 Column 3  Width=216
 
 [Docking][Data]
-DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,24 Size=1200,876 Split=X Selected=0x1D2F55EC
-  DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=883,1033 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=1472,1033 CentralNode=1 Selected=0x13926F0B
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=446,1033 Selected=0x1D2F55EC
+DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,24 Size=1920,1033 Split=X Selected=0x1D2F55EC
+  DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=883,1033 CentralNode=1 Selected=0x13926F0B
   DockNode    ID=0x00000004 Parent=0x7C6B3D9B SizeRef=421,1033 Split=Y Selected=0x199AB496
     DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=446,348 Selected=0x94263E27
-    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=446,683 Selected=0xA29824D7
+    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=446,683 Selected=0x199AB496
 
