--- a/MeowCAD/imgui.ini
+++ b/MeowCAD/imgui.ini
@@ -19,13 +19,13 @@ Size=446,929
 Collapsed=0
 
 [Window][demo]
-Pos=109,399
+Pos=225,310
 Size=274,325
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=268,79
-Size=565,936
+Pos=919,161
+Size=529,865
 Collapsed=0
 
 [Window][Dear ImGui Metrics/Debugger]
@@ -64,27 +64,35 @@ Size=314,131
 Collapsed=0
 
 [Window][Outliner]
-Pos=781,24
-Size=419,295
+Pos=1482,24
+Size=438,348
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties]
-Pos=781,321
-Size=419,579
+Pos=1482,374
+Size=438,683
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Viewport]
 Pos=0,24
-Size=779,876
+Size=1480,1033
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,24
-Size=1200,876
+Size=1920,1033
 Collapsed=0
+
+[Window][Dear ImGui Demo/ResizableChild_D5443E47]
+IsChild=1
+Size=467,129
+
+[Window][Dear ImGui Demo/Red_1D4E05CE]
+IsChild=1
+Size=329,326
 
 [Table][0xF653A44F,4]
 RefScale=18
@@ -94,9 +102,9 @@ Column 2  Width=96
 Column 3  Width=216
 
 [Docking][Data]
-DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,24 Size=1200,876 Split=X Selected=0x1D2F55EC
-  DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=1499,1033 CentralNode=1 Selected=0x13926F0B
-  DockNode    ID=0x00000004 Parent=0x7C6B3D9B SizeRef=419,1033 Split=Y Selected=0x199AB496
+DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,24 Size=1920,1033 Split=X Selected=0x1D2F55EC
+  DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=1480,1033 CentralNode=1 Selected=0x13926F0B
+  DockNode    ID=0x00000004 Parent=0x7C6B3D9B SizeRef=438,1033 Split=Y Selected=0x199AB496
     DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=446,348 Selected=0x94263E27
     DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=446,683 Selected=0x199AB496
 
