Implemented: - viewport::is_hovered -> give the viewport window is hovering or not - mesh deselect on viewport -> when you click an empty area, selected mesh become nullptr - fortunately , after implement is_hovered we can zoom in/out only inside viewport
bug solved:
- program crash after deleting mesh. Outliner window mesh.get_names() function was fail because mesh was a nullptr.
we add: if (!mesh) continue;

--- a/MeowCAD/imgui.ini
+++ b/MeowCAD/imgui.ini
@@ -24,7 +24,7 @@ Size=274,325
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=919,161
+Pos=943,56
 Size=529,865
 Collapsed=0
 
@@ -64,31 +64,31 @@ Size=314,131
 Collapsed=0
 
 [Window][Outliner]
-Pos=1482,24
-Size=438,348
+Pos=762,24
+Size=438,295
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties]
-Pos=1482,374
-Size=438,683
+Pos=762,321
+Size=438,579
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Viewport]
 Pos=0,24
-Size=1480,1033
+Size=760,876
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,24
-Size=1920,1033
+Size=1200,876
 Collapsed=0
 
 [Window][Dear ImGui Demo/ResizableChild_D5443E47]
 IsChild=1
-Size=467,129
+Size=478,129
 
 [Window][Dear ImGui Demo/Red_1D4E05CE]
 IsChild=1
@@ -102,8 +102,8 @@ Column 2  Width=96
 Column 3  Width=216
 
 [Docking][Data]
-DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,24 Size=1920,1033 Split=X Selected=0x1D2F55EC
-  DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=1480,1033 CentralNode=1 Selected=0x13926F0B
+DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,24 Size=1200,876 Split=X Selected=0x1D2F55EC
+  DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=1480,1033 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
   DockNode    ID=0x00000004 Parent=0x7C6B3D9B SizeRef=438,1033 Split=Y Selected=0x199AB496
     DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=446,348 Selected=0x94263E27
     DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=446,683 Selected=0x199AB496
