Engine::processInput speed variable added to pan

--- a/MeowCAD/imgui.ini
+++ b/MeowCAD/imgui.ini
@@ -103,7 +103,7 @@ Column 3  Width=216
 
 [Docking][Data]
 DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,24 Size=1920,1033 Split=X Selected=0x1D2F55EC
-  DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=1323,1033 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+  DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=1323,1033 CentralNode=1 Selected=0x13926F0B
   DockNode    ID=0x00000004 Parent=0x7C6B3D9B SizeRef=595,1033 Split=Y Selected=0x199AB496
     DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=446,348 Selected=0x94263E27
     DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=446,683 Selected=0x199AB496
