--- a/MeowCAD/imgui.ini
+++ b/MeowCAD/imgui.ini
@@ -53,8 +53,8 @@ Size=409,358
 Collapsed=0
 
 [Window][LOG]
-Pos=1501,374
-Size=419,683
+Pos=1563,378
+Size=357,679
 Collapsed=0
 DockId=0x00000006,1
 
@@ -64,26 +64,26 @@ Size=314,131
 Collapsed=0
 
 [Window][Outliner]
-Pos=725,24
-Size=475,295
+Pos=1563,24
+Size=357,352
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties]
-Pos=725,321
-Size=475,579
+Pos=1563,378
+Size=357,679
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Viewport]
 Pos=0,24
-Size=723,876
+Size=1561,1033
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,24
-Size=1200,876
+Size=1920,1033
 Collapsed=0
 
 [Window][Dear ImGui Demo/ResizableChild_D5443E47]
@@ -112,9 +112,9 @@ Column 2  Width=96
 Column 3  Width=216
 
 [Docking][Data]
-DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,24 Size=1200,876 Split=X Selected=0x1D2F55EC
-  DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=1443,1033 CentralNode=1 Selected=0x13926F0B
-  DockNode    ID=0x00000004 Parent=0x7C6B3D9B SizeRef=475,1033 Split=Y Selected=0x199AB496
-    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=446,348 Selected=0x94263E27
-    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=446,683 Selected=0x199AB496
+DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,24 Size=1920,1033 Split=X Selected=0x1D2F55EC
+  DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=1561,1033 CentralNode=1 Selected=0x13926F0B
+  DockNode    ID=0x00000004 Parent=0x7C6B3D9B SizeRef=357,1033 Split=Y Selected=0x199AB496
+    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=367,292 Selected=0x94263E27
+    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=367,563 Selected=0xA29824D7
 
