--- a/MeowCAD/imgui.ini
+++ b/MeowCAD/imgui.ini
@@ -53,8 +53,8 @@ Size=409,358
 Collapsed=0
 
 [Window][LOG]
-Pos=843,324
-Size=357,576
+Pos=1563,379
+Size=357,678
 Collapsed=0
 DockId=0x00000006,1
 
@@ -64,26 +64,26 @@ Size=314,131
 Collapsed=0
 
 [Window][Outliner]
-Pos=843,24
-Size=357,298
+Pos=1563,24
+Size=357,353
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties]
-Pos=843,324
-Size=357,576
+Pos=1563,379
+Size=357,678
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Viewport]
 Pos=0,24
-Size=841,876
+Size=1561,1033
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,24
-Size=1200,876
+Size=1920,1033
 Collapsed=0
 
 [Window][Dear ImGui Demo/ResizableChild_D5443E47]
@@ -105,8 +105,8 @@ Size=252,194
 Collapsed=0
 
 [Window][Skybox]
-Pos=843,324
-Size=357,576
+Pos=1563,379
+Size=357,678
 Collapsed=0
 DockId=0x00000006,2
 
@@ -118,9 +118,9 @@ Column 2  Width=96
 Column 3  Width=216
 
 [Docking][Data]
-DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,24 Size=1200,876 Split=X Selected=0x1D2F55EC
+DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,24 Size=1920,1033 Split=X Selected=0x1D2F55EC
   DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=1561,1033 CentralNode=1 Selected=0x13926F0B
   DockNode    ID=0x00000004 Parent=0x7C6B3D9B SizeRef=357,1033 Split=Y Selected=0x199AB496
-    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=367,292 Selected=0x94263E27
-    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=367,563 Selected=0x582B53F6
+    DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=367,299 Selected=0x94263E27
+    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=367,575 Selected=0x199AB496
 
