--- a/MeowCAD/imgui.ini
+++ b/MeowCAD/imgui.ini
@@ -59,8 +59,8 @@ Collapsed=0
 DockId=0x00000006,1
 
 [Window][Credits]
-Pos=1084,436
-Size=314,131
+Pos=676,298
+Size=265,113
 Collapsed=0
 
 [Window][Outliner]
@@ -122,5 +122,5 @@ DockSpace     ID=0x7C6B3D9B Window=0xA87D555D Pos=0,24 Size=1920,1033 Split=X Se
   DockNode    ID=0x00000003 Parent=0x7C6B3D9B SizeRef=1561,1033 CentralNode=1 Selected=0x13926F0B
   DockNode    ID=0x00000004 Parent=0x7C6B3D9B SizeRef=357,1033 Split=Y Selected=0x199AB496
     DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=367,299 Selected=0x94263E27
-    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=367,575 Selected=0x199AB496
+    DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=367,575 Selected=0x582B53F6
 
